youtube playlist js working and layout fixed

--- a/app/views/first_search.erb
+++ b/app/views/first_search.erb
@@ -6,13 +6,11 @@
   </div>
 
 
-  <div class = "field_container">
-  	<div class = "fields">
+  <div class = "field_container border-radius">
+  	<div class = "field_width">
   		<form action= "/first_search/results" method = "post" id = "first_search">
-  			<input class = "input_field" id = "first_search" name = "first_search" type="text" placeholder="What song?">
-  			<div id = "first_button">
-  				<input type = "submit" id = "first" value = "Search Youtube">
-  			</div>
+  			<input class = "input_field" id = "first_search" name = "first_search" type="text" placeholder="What song?" autocomplete="off" required>
+  				<input type = "submit" class = "button expand" id = "first" value = "Search Youtube">
   		</form>
   	</div>
   </div>
@@ -21,4 +19,10 @@
 
   </div>
 </div>
+
+<script>
+  document.body.style.background="url('https://38.media.tumblr.com/a1400ccedb495be3099505e32f15d43b/tumblr_n8hftlTDqs1qbqjq1o1_1280.jpg') no-repeat center center fixed"
+  document.body.style.backgroundSize = "100% 80%"
+</script>
+
 
