--- a/public/css/normalize.css
+++ b/public/css/normalize.css
@@ -1,4 +1,4 @@
-/*! normalize.css v3.0.0 | MIT License | git.io/normalize */
+/*/*/*/*/*/*! normalize.css v3.0.0 | MIT License | git.io/normalize */
 
 /**
  * 1. Set default font family to sans-serif.
@@ -245,7 +245,7 @@ samp {
  * 3. Address margins set differently in Firefox 4+, Safari 5, and Chrome.
  
 
-button,
+
 input,
 optgroup,
 select,
@@ -259,9 +259,6 @@ textarea {
  * Address `overflow` set to `hidden` in IE 8/9/10.
  */
 
-button {
-  overflow: visible;
-}
 
 /**
  * Address inconsistent `text-transform` inheritance for `button` and `select`.
@@ -270,7 +267,7 @@ button {
  * Correct `select` style inheritance in Firefox.
  */
 
-button,
+
 select {
   text-transform: none;
 }
@@ -283,7 +280,7 @@ select {
  *    `input` and others.
  */
 
-button,
+
 html input[type="button"], /* 1 */
 input[type="reset"],
 input[type="submit"] {
@@ -318,6 +315,7 @@ input::-moz-focus-inner {
 input {
   line-height: normal;
 }
+
 
 /**
  * It's recommended that you don't attempt to style these elements.
@@ -421,3 +419,4 @@ td,
 th {
   padding: 0;
 }
+*/*/*/*/*/
