--- a/app/views/first_song.erb
+++ b/app/views/first_song.erb
@@ -1,4 +1,4 @@
-<div class = "result_left">
+<div class = "result_left first_left_color">
   <% reply1.videos.each do |video| %>
   <div class = "search_block">
   <div class = "thumbnail">
@@ -13,7 +13,7 @@
   <% end %>
 </div>
 
-<div class = "result_right">
+<div class = "result_right right_left_color">
   <% reply2.videos.each do |video| %>
   <div class = "search_block">
   <div class = "thumbnail">
