--- a/app/views/new_song.erb
+++ b/app/views/new_song.erb
@@ -1,10 +1,9 @@
 <div class = "queue_container">
-	<div class = "thumbnail">
-		<img src = "<%= video.thumbnails.first.url %>" class = "youtube_thumbnail">
+	<div class = "sidebar_thumbnail">
+		<img src = "<%= thumbnail_url %>" class = "youtube_thumbnail">
 	</div>
 	<div class = "queue_right">
-		<div class = "video_title"> <%= video.title %></div> 
+		<div class = "queue_title"> <%= title %></div> 
 		<br>
 	</div>
 </div>
-
