--- a/app/views/room.erb
+++ b/app/views/room.erb
@@ -6,30 +6,50 @@
       <a href = "/signout"> Bounce </a>
     </div>
 
-<!-- "https://www.youtube.com/v/M7lc1UVf-VE?controls=0&rel=0&showinfo=0&autohide=1&version=3" -->
+    <!-- "https://www.youtube.com/v/M7lc1UVf-VE?controls=0&rel=0&showinfo=0&autohide=1&version=3" -->
 
-  <% if @host == true %>
+    <% if @host == true %>
     <div class = "start_youtube">
     </div>
 
-      <div id="player"></div>
+    <div id="player"></div>
     <% end %>
 
+    <div id = "hide_sidbar">
+      <div id = "sidebar">
 
+        <%@playlist_videos.each do |video| %>
+        <%video_info = @client.video_by(video.video_id) %>
+        <%thumbnail_url = video_info.thumbnails.first.url %>
+        <%title = video_info.title %>
+        <div class = "queue_container">
+          <div class = "sidebar_thumbnail">
+            <img src = "<%= thumbnail_url %>" class = "youtube_thumbnail">
+          </div>
+          <div class = "queue_right">
+            <div class = "queue_title"> <%= title %></div> 
+            <br>
+          </div>
+        </div>
+        <% end %>
+        <div class="add_queue">
+        </div>
+      </div>
+    </div>
 
 
 
 
   </div>
 
-  <div class = "bottom_half">
+  <div class = "bottom_half gradient">
 
-      <div id = "search_container">
-        <form action= "/search" method = "post" id = "search">
-          <img id = "mag_glass" src = "http://www.9zap.com/wp-content/uploads/2010/08/329.jpg">
-          <input  type="text" id = "search_field"name = "search" placeholder="Search YouTube" autocomplete="off" required>
-        </form>
-      </div>
+    <div id = "search_container">
+      <form action= "/search" method = "post" id = "search">
+        <img id = "mag_glass" src = "http://www.9zap.com/wp-content/uploads/2010/08/329.jpg">
+        <input  type="text" id = "search_field"name = "search" placeholder="Search YouTube" autocomplete="off" required>
+      </form>
+    </div>
     <div class ="search_area">
       <div class = "result_container">
       </div>
@@ -50,12 +70,12 @@
     window.player = new YT.Player('player', {
       height: '100%',
       width: '100%',
-       videoId: "<%= @video_id %>",
+      videoId: "<%= @video_id %>",
       playerVars:
-        {
-          controls: 1,
-          showinfo:0
-        },
+      {
+        controls: 1,
+        showinfo:0
+      },
       events: {
         'onReady': onReady,
         'onStateChange': onStateChange
@@ -71,11 +91,11 @@
           url: '/playlist',
           type: 'post'
         }).done( function(song) {
-            window.player.destroy();
-            window.player = null
-            if (song) {
-              playNextSong(song["queue"]);
-            }
+          window.player.destroy();
+          window.player = null
+          if (song) {
+            playNextSong(song["queue"]);
+          }
 
         })
       }
@@ -92,8 +112,8 @@
     // }
     // }
 
-  function onStateChange(newState) {
-    if ( newState == 0 ) {
+    function onStateChange(newState) {
+      if ( newState == 0 ) {
       // console.log("onStateChange");
       /* load next video */
       // window.player.destroy();
@@ -113,4 +133,4 @@
   // function stopVideo() {
   //     player.stopVideo();
   // }
-</script>
+  </script>
