--- a/public/css/application.css
+++ b/public/css/application.css
@@ -150,19 +150,26 @@ iframe[seamless]{
 	overflow: hidden;
 }
 
-.queue_container {
+.queue_container, .search_block {
 	height: 6rem;
 	padding: 0.5rem;
 	overflow: scroll;
+	opacity: 0.6;
+}
+
+.queue_container{
 	border-bottom: 1px solid black;
 	background-color: white;
-	opacity: 0.6;
+
 }
 
 .queue_container:hover {
 	opacity: 1;
 }
 
+.search_block:hover {
+	opacity: 1;
+}
 
 .queue_right {
 	float: right;
@@ -194,12 +201,26 @@ iframe[seamless]{
 /*SEARCH Area*/
 .bottom_half {
 	width: 50rem;
-	background-color: rgba(0,0,0,0.85);
 	margin: 0 auto;
 	padding: 1rem 1rem 7% 1rem;
 	position: relative;
 	margin-top: 50%;
 	border-radius: 0.5rem;
+	-webkit-box-shadow: 5px -5px 5px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: 5px -5px 5px 0px rgba(0,0,0,0.75);
+	box-shadow: 5px -5px 5px 0px rgba(0,0,0,0.75);
+}
+
+.gradient {
+	background: rgb(238,238,238); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(238,238,238,1) 0%, rgba(204,204,204,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(238,238,238,1)), color-stop(100%,rgba(204,204,204,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#cccccc',GradientType=0 ); /* IE6-9 */
+	opacity: 0.98;
 }
 
 
@@ -292,9 +313,11 @@ iframe[seamless]{
 	float: right;
 }
 
-.search_block {
-	padding-bottom: 1rem;
-	border-radius: 0.5rem;
+
+.search_block a {
+	text-decoration: none;
+	font-family: 'Ubuntu', sans-serif;
+	color: black;
 }
 
 .search_block:hover {
@@ -315,6 +338,10 @@ iframe[seamless]{
 	height: 25rem;
 	margin: auto;
 	overflow: scroll;
+}
+
+.thumbnail {
+	float: right;
 }
 
 .first_search_area {
