--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,13 +1,16 @@
 /*HOMEPAGE*/
 
 
-h1 {
-	color: white;
+h1, h3 {
 	margin: auto;
 	text-align: center;
-	font-size: 4em;
 	font-family: 'Ubuntu', sans-serif;
 	font-weight: bolder;
+}
+
+h1 {
+	font-size: 4em;
+	color: white;
 }
 
 .text_container {
@@ -199,6 +202,14 @@ iframe[seamless]{
 
 
 /*SEARCH Area*/
+h3 {
+	color: white;
+	font-size: 2em;
+	text-shadow:  3px 1px 2px rgba(150, 150, 150, 1);
+}
+
+
+
 .bottom_half {
 	width: 50rem;
 	margin: 0 auto;
@@ -220,7 +231,7 @@ iframe[seamless]{
 	background: -ms-linear-gradient(top,  rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%); /* IE10+ */
 	background: linear-gradient(to bottom,  rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#cccccc',GradientType=0 ); /* IE6-9 */
-	opacity: 0.98;
+	opacity: 0.96;
 }
 
 
