--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,7 +1,8 @@
   <div class = "text_container">
     <h1>playlist.en</h1>
     <div id = "blurb">
-      Join the party.
+      <br>
+      Easy listenings.
     </div>
   </div>
 
@@ -19,5 +20,6 @@
 <script>
   document.body.style.background="url('https://38.media.tumblr.com/a1400ccedb495be3099505e32f15d43b/tumblr_n8hftlTDqs1qbqjq1o1_1280.jpg') no-repeat center center fixed"
   document.body.style.backgroundSize = "100% 80%"
+window.onload = $('body').fadeIn("slow");
 
 </script>
