--- a/app/views/first_search.erb
+++ b/app/views/first_search.erb
@@ -21,8 +21,9 @@
 </div>
 
 <script>
-  document.body.style.background="url('https://38.media.tumblr.com/a1400ccedb495be3099505e32f15d43b/tumblr_n8hftlTDqs1qbqjq1o1_1280.jpg') no-repeat center center fixed"
-  document.body.style.backgroundSize = "100% 80%"
+  document.body.style.background="url('http://images.alphacoders.com/174/174991.jpg') no-repeat center center fixed";
+  document.body.style.backgroundSize = "cover";
+  // document.body.style.overflow = "hidden";
 </script>
 
 
