--- a/public/css/application.css
+++ b/public/css/application.css
@@ -13,11 +13,11 @@ h1, h3 {
 h1 {
 	font-size: 4em;
 	color: white;
+	text-shadow: 1px 0px 1px rgba(150, 150, 150, 1);
 }
 
 .text_container {
-	position: absolute;
-	margin-top: 7%;
+	margin-top: 5rem;
 	width: 100%;
 }
 
@@ -30,6 +30,7 @@ h1 {
 	font-size: 17px;
 	font-family: 'Ubuntu', sans-serif;
 	font-weight: 500;
+	text-shadow: 1px 0px 1px rgba(150, 150, 150, 1);
 }
 
 .button_placement {
@@ -57,10 +58,9 @@ h1 {
 }
 
 .field_container {
-	position: absolute;
 	width: 100%;
 	height: 10rem;
-	margin-top: 28%;
+	margin-top: 10rem;
 }
 
 .container {
@@ -69,6 +69,7 @@ h1 {
 }
 
 .field_width {
+	overflow: hidden;
 	width: 16rem;
 	margin: auto;
 
@@ -95,6 +96,7 @@ h1 {
 /*html5-player-chrome html5-stop-propagation*/
 #player {
 	position: fixed;
+	top: 0;
 }
 
 
@@ -205,9 +207,8 @@ iframe[seamless]{
 
 /*SEARCH Area*/
 h3 {
-	color: white;
+	color: black;
 	font-size: 2em;
-	text-shadow:  3px 1px 2px rgba(150, 150, 150, 1);
 }
 
 
@@ -216,7 +217,6 @@ h3 {
 	width: 50rem;
 	margin: 0 auto;
 	padding: 1rem 1rem 7% 1rem;
-	position: relative;
 	margin-top: 50%;
 	border-radius: 0.5rem;
 	-webkit-box-shadow: 5px -5px 5px 0px rgba(0,0,0,0.75);
@@ -278,14 +278,6 @@ h3 {
 	position: relative;
 	margin-top: 0.5rem;
 	float: left;
-}
-
-#room_page { 
-	background: url('../images/concert.jpg') no-repeat center center fixed;
-	background-size: cover;
-	overflow: hidden;
-	width: 100%;
-	padding-bottom: 3rem;
 }
 
 .result_container {
@@ -362,7 +354,7 @@ h3 {
 	position: absolute;	
 	width: 100%;
 	height: 100%;
-	margin-top: 6%;
+	top: 4rem;
 }
 
 
