--- a/app/views/rooms/_room_form.html.haml
+++ b/app/views/rooms/_room_form.html.haml
@@ -1,5 +1,4 @@
 = form_for @room do |f|
-  = f.label :name
-  = f.text_field :name
 
+  = f.text_field :name, placeholder: "Join a room"
   = f.submit "Join"
