Youtube player WIP

--- a/app/views/rooms/index.html.haml
+++ b/app/views/rooms/index.html.haml
@@ -11,7 +11,5 @@
 
 
 :javascript
-  var params = { allowScriptAccess: "always" };
-  var atts = { id: "myytplayer" };
-  swfobject.embedSWF("http://www.youtube.com/v/lK4red5MqBI?enablejsapi=1&playerapiid=ytplayer&version=3&autoplay=1&controls=0&rel=0&showinfo=0&autohide=1&color=white&iv_load_policy=3&theme=light",
-                       "ytapiplayer", "425", "356", "8", null, null, params, atts);
+  ytplayer.createPlayer()
+  
