Creates youtube player on page load

--- a/app/views/rooms/index.html.haml
+++ b/app/views/rooms/index.html.haml
@@ -11,5 +11,8 @@
 
 
 :javascript
-  ytplayer.createPlayer()
+  $(document).ready(function(){
+    ytplayer = new Youtube.Controller;
+    ytplayer.createPlayer();
+  })
   
