Creates ytplayer on show page instead of index

--- a/app/views/rooms/show.html.haml
+++ b/app/views/rooms/show.html.haml
@@ -1,2 +1,9 @@
 %h1
   #{@room_name}
+
+
+:javascript
+  $(document).ready(function(){
+    ytplayer = new Youtube.Controller;
+    ytplayer.createPlayer();
+  })
