--- a/app/views/tracks/show.html.haml
+++ b/app/views/tracks/show.html.haml
@@ -1,5 +1,11 @@
-- @results1.videos.each do |video|
-  = video.title
-  = video.unique_id
-  =video.thumbnails.first.url
-  =video.media_content.first.url
+.row
+  - @results.videos.each do |video|
+    %a{href: video.unique_id}
+      .col-xs-10.col-md-7
+        .thumbnail
+          #video-title
+            = video.title
+          #video-image
+            = image_tag video.thumbnails.first.url
+
+
