--- a/app/views/tracks/show.html.haml
+++ b/app/views/tracks/show.html.haml
@@ -1,11 +1,13 @@
 .row
   - @results.videos.each do |video|
-    %a{href: video.unique_id}
-      .col-xs-10.col-md-7
+    = link_to room_path(id: @room.name) do
+      .col-xs-10.col-md-7.video-container
         .thumbnail
           #video-title
             = video.title
           #video-image
             = image_tag video.thumbnails.first.url
+          #video-id
+            = video.unique_id
 
 
