--- a/app/views/tracks/show.html.haml
+++ b/app/views/tracks/show.html.haml
@@ -1,13 +1,9 @@
 .row
   - @results.videos.each do |video|
-    = link_to room_path(id: @room.name) do
+    = link_to room_path(id: @room.name, first: video.unique_id ) do
       .col-xs-10.col-md-7.video-container
         .thumbnail
           #video-title
             = video.title
           #video-image
             = image_tag video.thumbnails.first.url
-          #video-id
-            = video.unique_id
-
-
