Minor edits to view

--- a/app/views/tracks/show.html.haml
+++ b/app/views/tracks/show.html.haml
@@ -1,4 +1,4 @@
-.row
+.row#search-results
   - @results.videos.each do |video|
     = link_to room_path(id: @room.name, first: video.unique_id ) do
       .col-xs-10.col-md-7.video-container
