--- a/app/views/tracks/_track_search.html.haml
+++ b/app/views/tracks/_track_search.html.haml
@@ -3,6 +3,6 @@
 /   = f.submit "Search"
 
 
-%form#search_first_song{action: '/rooms/'+ @room.id.to_s + '/tracks', method: "post"}
+%form#search_first_song{action: '/rooms/'+ @room.id.to_s + '/tracks/search', method: "POST"}
   %input{placeholder: "Find search video"}
   %input{type:"submit", value:"Search"} 
