--- a/app/views/rooms/show.html.haml
+++ b/app/views/rooms/show.html.haml
@@ -1,60 +1,4 @@
 %h1
   #{@room_name}
 
-
-
-.div#player
-
-=render partial: "tracks/track_search"
-
-
-:javascript
-  var tag = document.createElement('script');
-    tag.src = "https://www.youtube.com/iframe_api";
-    firstScriptTag = document.getElementsByTagName('script')[0];
-    firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-    done = false;
-    window.player;
-
-  function onYouTubeIframeAPIReady() {
-    window.player = new YT.Player('player', {
-      height: '100%',
-      width: '100%',
-      videoId: "#{@video}",
-      playerVars:
-      {
-        controls: 1,
-        showinfo: 0,
-        autoplay: 1
-      },
-      events: {
-        'onReady': onReady,
-        'onStateChange': onStateChange
-      }
-    });    
-  }
-
-  function onReady() {
-      window.player.addEventListener('onStateChange', function(e) {
-        var firstVideo = true;
-        if ( e.data == 0) {
-            window.player.destroy();
-          $.ajax({
-            url: '/playlist',
-            type: 'post',
-            data: {firstVideo: true}
-          }).done( function(song) {
-            window.player = null
-            if (song) {
-              playNextSong(song["queue"]);
-            }
-
-          })
-        }
-      });
-    }
-
-      function onStateChange(newState) {
-        if ( newState == 0 ) {
-      }
-    }
+=render partial: "search"
