--- a/app/views/rooms/theatre.html.haml
+++ b/app/views/rooms/theatre.html.haml
@@ -1,70 +1,6 @@
 .div#player
 
 :javascript
-  var tag = document.createElement('script');
-    tag.src = "https://www.youtube.com/iframe_api";
-    firstScriptTag = document.getElementsByTagName('script')[0];
-    firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-    done = false;
-    window.player;
-
-  function onYouTubeIframeAPIReady() {
-    window.player = new YT.Player('player', {
-      height: '100%',
-      width: '100%',
-      videoId: "#{@next_video}",
-      playerVars:
-      {
-        controls: 1,
-        showinfo: 0,
-        autoplay: 1
-      },
-      events: {
-        'onReady': onReady,
-        'onStateChange': onStateChange
-      }
-    });    
-  }
-
-  function onReady() {
-      window.player.addEventListener('onStateChange', function(e) {
-        var firstVideo = true;
-        if ( e.data == 0) {
-          console.log('song has ended')
-          window.player.destroy();
-          $.ajax({
-            url: window.location.pathname+ '/nextvideo',
-            type: 'post'
-          }).done(function(response){
-            playNextVideo(response.video);
-          })
-        }
-      });
-    }
-
-      function onStateChange(newState) {
-        if ( newState == 0 ) {
-      }
-    }
-
-    function playNextVideo(video) {
-      console.log('play next video')
-      console.log(video)
-
-      window.player = new YT.Player('player', {
-        height: '100%',
-        width: '100%',
-        videoId: video,
-        playerVars:
-          {
-            controls: 1,
-            showinfo:0,
-            autoplay: 1
-          },
-        events: {
-          'onReady': onReady,
-          'onStateChange': onStateChange
-        }
-      });    
-    }
-
+  $(document).ready(function(){
+  player = new Youtube.Controller
+  })
