--- a/app/views/rooms/_room_form.html.haml
+++ b/app/views/rooms/_room_form.html.haml
@@ -1,4 +1,4 @@
 = form_for @room do |f|
 
   = f.text_field :name, placeholder: "Join a room"
-  = f.submit "Join"
+  = f.submit "Join", id: "join-btn"
