--- a/app/assets/stylesheets/compile.css
+++ b/app/assets/stylesheets/compile.css
@@ -1,23 +1,138 @@
-#index-page {
-  width: 100%;
-  padding: 15%; }
-  #index-page h1 {
-    text-align: center; }
-  #index-page #new_room {
-    width: 30rem;
-    margin: auto; }
-    #index-page #new_room #room_name {
-      border: none;
-      width: 70%;
-      padding: 0;
-      text-align: center; }
-    #index-page #new_room #join-btn {
-      border: none;
-      background-color: none;
-      width: 28%; }
+@charset "UTF-8";
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  box-sizing: border-box; }
 
-#player {
-  height: 100%;
-  width: 100%;
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block; }
+
+body {
+  line-height: 1; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+html {
+  background-color: #030303; }
+
+#index-page {
+  height: 10rem;
+  width: 30rem;
+  margin: auto;
+  margin-top: -5rem;
+  top: 45%;
+  margin-left: -15rem;
+  left: 50%;
   position: absolute;
-  top: 0; }
+  text-align: center; }
+  #index-page h1 {
+    font-size: 5rem;
+    position: absolute;
+    margin-left: -10rem;
+    left: 50%;
+    top: 5%;
+    color: white; }
+  #index-page #new_room {
+    position: absolute;
+    top: 65%;
+    margin-left: -12rem;
+    left: 50%;
+    width: 24rem;
+    display: block; }
+    #index-page #new_room #room_name {
+      color: #030303;
+      padding: 6px 0;
+      text-align: center;
+      border: none;
+      width: 68%;
+      outline: none; }
+    #index-page #new_room #join-btn {
+      color: white;
+      border: 3px solid white;
+      background-color: #030303;
+      width: 30%; }
+
+#search-container {
+  width: 24rem;
+  margin: auto;
+  margin-top: 2rem; }
+  #search-container #search-results {
+    border: 4px solid white;
+    width: 24rem;
+    position: absolute;
+    left: -12rem;
+    margin-left: 50%;
+    height: 30rem;
+    overflow: scroll; }
+  #search-container .video-container {
+    border-bottom: 1px solid #343434;
+    position: relative;
+    height: 9rem;
+    padding: 1rem; }
+    #search-container .video-container a {
+      text-decoration: none; }
+    #search-container .video-container .video-image {
+      position: absolute;
+      height: 7rem;
+      width: 7rem; }
+    #search-container .video-container .video-title-container {
+      color: white;
+      position: absolute;
+      width: 15rem;
+      right: 0;
+      text-align: center; }
+  #search-container #search_first_song ::-webkit-input-placeholder::before {
+    font-family: fontAwesome;
+    content: '\f002  ';
+    color: black; }
+  #search-container #search_first_song ::-moz-placeholder::before {
+    font-family: fontAwesome;
+    content: '\f002  ';
+    color: black; }
+  #search-container #search_first_song :-ms-input-placeholder::before {
+    font-family: fontAwesome;
+    content: '\f002  ';
+    color: black; }
+  #search-container #search_first_song input:-moz-placeholder::before {
+    font-family: fontAwesome;
+    content: '\f002  ';
+    color: black; }
+  #search-container #search_first_song input {
+    padding: 6px 0;
+    position: relative;
+    width: 100%;
+    margin: auto;
+    border: none;
+    text-align: center;
+    outline: none; }
