--- a/app/views/rooms/_search.html.haml
+++ b/app/views/rooms/_search.html.haml
@@ -1,3 +1,3 @@
-%form#search_first_song{action: "/rooms/#{params[:id]}/search", method: "POST"}
-  %input{placeholder: "Find search video"}
-  %input{type:"submit", value:"Search"} 
+#search-container
+  %form#search_first_song{action: "/rooms/#{params[:id]}/search", method: "POST"}
+    %input{placeholder: "Find search video"}
