--- a/app/views/rooms/video_result.html.haml
+++ b/app/views/rooms/video_result.html.haml
@@ -1,9 +1,8 @@
-.row#search-results
+#search-results
   - @results.videos.each do |video|
     = link_to room_path(id: @room.name, first: video.unique_id ) do
-      .col-xs-10.col-md-7.video-container
-        .thumbnail
-          #video-title
-            = video.title
-          #video-image
-            = image_tag video.thumbnails.first.url
+      .video-container
+        .video-image-container
+          = image_tag video.thumbnails.first.url, class: 'video-image'
+        %p.video-title-container
+          = video.title
