--- a/app/views/rooms/theatre.html.haml
+++ b/app/views/rooms/theatre.html.haml
@@ -1,10 +1,16 @@
 #theatre-page
   
   .div#player
-
+  .fa.fa-list-ol#playlist-btn
+  
   =render partial: "search"
 
 :javascript
+  $(document).ready(function(){
+    ytplayer = new Search.Controller;
+    ytplayer.bindListeners();
+  })
+
   var tag = document.createElement('script');
         tag.src = "https://www.youtube.com/iframe_api";
         firstScriptTag = document.getElementsByTagName('script')[0];
