Adds cancel button to view and adjusts doc ready

--- a/app/views/rooms/_search.html.haml
+++ b/app/views/rooms/_search.html.haml
@@ -1,3 +1,4 @@
 #search-container
   %form#search_first_song{action: "/rooms/#{params[:id]}/search", method: "POST"}
     %input{placeholder: "Find search video"}
+    .fa.fa-remove#cancel-btn
