--- a/app/assets/stylesheets/compile.css
+++ b/app/assets/stylesheets/compile.css
@@ -153,3 +153,33 @@ html {
       top: 0.3rem;
       right: 1rem;
       display: none; }
+
+#close-list-btn {
+  visibility: hidden;
+  z-index: 1;
+  background-color: black;
+  height: 1.5rem;
+  width: 1.5rem;
+  text-align: center;
+  border-radius: 50%;
+  line-height: 1.5rem;
+  position: fixed;
+  top: 0;
+  right: 19.2rem;
+  color: white; }
+
+#playlist-container {
+  visibility: hidden;
+  width: 20rem;
+  border: 2px solid black;
+  background-color: white;
+  position: fixed;
+  top: 0;
+  right: 0;
+  max-height: 100%;
+  overflow: scroll;
+  padding: 2px;
+  background-color: rgba(255, 255, 255, 0.8); }
+  #playlist-container ul li {
+    padding: 10px;
+    border-bottom: 1px solid gray; }
