Changes placeholder for room input

--- a/app/views/rooms/_room_form.html.haml
+++ b/app/views/rooms/_room_form.html.haml
@@ -2,5 +2,5 @@
 
 = form_for @room do |f|
 
-  = f.text_field :name, placeholder: "Join a room"
+  = f.text_field :name, placeholder: "Where's the party at?"
   = f.submit "Join", id: "join-btn"
