--- a/app/assets/stylesheets/scss/_front.scss
+++ b/app/assets/stylesheets/scss/_front.scss
@@ -1,5 +1,31 @@
-$bckgrnd: #030303;
-$comp: white;
+$bckgrnd: white;
+$comp: black;
+
+#crowd-img-front{
+  background-image: url('/assets/crowd2.png');
+  z-index: 2;
+  -webkit-animation: bounce 3s infinite;
+  -moz-animation: bounce 3s infinite;
+  -ms-animation: bounce 3s infinite;
+  animation: bounce 3s infinite;
+}
+
+#crowd-img-back{
+  background-image: url('/assets/crowd1.png');
+  z-index: 1;
+  -webkit-animation: bounce 6s infinite;
+  -moz-animation: bounce 6s infinite;
+  -ms-animation: bounce 6s infinite;
+  animation: bounce 6s infinite;
+}
+.crowd{
+  position: fixed;
+  bottom: 0;
+  background-size: cover;
+  height: 40%;
+  width: 100%;
+  background-repeat: no-repeat;
+}
 
 #index-page{
   height: 10rem;
@@ -30,15 +56,75 @@ $comp: white;
       color: $bckgrnd;
       padding: 6px 0;
       text-align: center;
-      border: none;
-      width: 68%;
+      border: 3px solid $comp;
+      width: 65%;
       outline: none;
     }
     #join-btn{
       color: $comp;
       border: 3px solid $comp;
       background-color: $bckgrnd;
+      padding-top: 0.4rem;
+      padding-bottom: 0.4rem;
       width: 30%;
     }
   }
 }
+
+@-webkit-keyframes bounce {
+  0%, 100% {
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
+  50% {
+    -webkit-transform: translateY(30px);
+    -moz-transform: translateY(30px);
+    -ms-transform: translateY(30px);
+    transform: translateY(30px);
+  }
+}
+@-moz-keyframes bounce {
+  0%, 100% {
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
+  50% {
+    -webkit-transform: translateY(30px);
+    -moz-transform: translateY(30px);
+    -ms-transform: translateY(30px);
+    transform: translateY(30px);
+  }
+}
+@-ms-keyframes bounce {
+  0%, 100% {
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
+  50% {
+    -webkit-transform: translateY(30px);
+    -moz-transform: translateY(30px);
+    -ms-transform: translateY(30px);
+    transform: translateY(30px);
+  }
+}
+@keyframes bounce {
+  0%, 100% {
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
+  50% {
+    -webkit-transform: translateY(30px);
+    -moz-transform: translateY(30px);
+    -ms-transform: translateY(30px);
+    transform: translateY(30px);
+  }
+}
+  
