Updog image and animation

--- a/app/views/rooms/_search.html.haml
+++ b/app/views/rooms/_search.html.haml
@@ -2,3 +2,4 @@
   %form#search_first_song{action: "/rooms/#{params[:id]}/search", method: "POST"}
     %input{placeholder: "Find search video"}
     .fa.fa-remove#cancel-btn
+#updog.gig
