--- a/app/assets/stylesheets/scss/_search.scss
+++ b/app/assets/stylesheets/scss/_search.scss
@@ -1,12 +1,32 @@
 $bckgrnd: #030303;
 $comp: white;
 
+
+#updog{
+  position: absolute;
+  top: 15rem;
+  left: -2.5rem;
+  margin-left: 50%;
+  background-image: url('/assets/updog.png');
+  background-size: contain;
+  height: 5rem;
+  width: 5rem;
+  background-repeat: no-repeat;
+  -webkit-animation: gig 6s infinite;
+  -moz-animation: gig 6s infinite;
+  -ms-animation: gig 6s infinite;
+  animation: gig 6s infinite;
+}
+
+
 #search-container{
   width: 24rem;
   margin: auto;
   margin-top: 2rem;
   #search-results{
-    border: 4px solid $comp;
+    border: 3px solid $bckgrnd;
+    background-color: rgba(255,255,255, 0.8);
+    margin-top:-3px;
     width: 24rem;
     position: absolute;
     left: -12rem;
@@ -28,7 +48,7 @@ $comp: white;
       width: 7rem;
     }
     .video-title-container{
-      color: $comp;
+      color: $bckgrnd;
       position: absolute;
       width: 15rem;
       right: 0;
@@ -65,6 +85,7 @@ $comp: white;
       border: none;
       text-align: center;
       outline: none;
+      border: 3px solid $bckgrnd;
     }
     #cancel-btn{
       position: absolute;
@@ -76,3 +97,59 @@ $comp: white;
 }
 
 
+@-webkit-keyframes gig {
+  0%, 100% {
+    -webkit-transform: rotate(30deg);
+    -moz-transform: rotate(30deg);
+    -ms-transform: rotate(30deg);
+    transform: rotate(30deg);
+  }
+  50% {
+    -webkit-transform: rotate(-30deg);
+    -moz-transform: rotate(-30deg);
+    -ms-transform: rotate(-30deg);
+    transform: rotate(-30deg);
+  }
+}
+// @-moz-keyframes gig {
+//   0%, 100% {
+//     -webkit-transform: translateY(0);
+//     -moz-transform: translateY(0);
+//     -ms-transform: translateY(0);
+//     transform: translateY(0);
+//   }
+//   50% {
+//     -webkit-transform: translateY(30px);
+//     -moz-transform: translateY(30px);
+//     -ms-transform: translateY(30px);
+//     transform: translateY(30px);
+//   }
+// }
+// @-ms-keyframes gig {
+//   0%, 100% {
+//     -webkit-transform: translateY(0);
+//     -moz-transform: translateY(0);
+//     -ms-transform: translateY(0);
+//     transform: translateY(0);
+//   }
+//   50% {
+//     -webkit-transform: translateY(30px);
+//     -moz-transform: translateY(30px);
+//     -ms-transform: translateY(30px);
+//     transform: translateY(30px);
+//   }
+// }
+// @keyframes gig {
+//   0%, 100% {
+//     -webkit-transform: translateY(0);
+//     -moz-transform: translateY(0);
+//     -ms-transform: translateY(0);
+//     transform: translateY(0);
+//   }
+//   50% {
+//     -webkit-transform: translateY(30px);
+//     -moz-transform: translateY(30px);
+//     -ms-transform: translateY(30px);
+//     transform: translateY(30px);
+//   }
+// }
