--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,8 @@
     %title Playlisten
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     %link{:href => "https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css", :rel => "stylesheet"}/
+    %link{:href => 'http://fonts.googleapis.com/css?family=Lobster', :rel=>'stylesheet', :type=>'text/css'}/
+    %link{:href => 'http://fonts.googleapis.com/css?family=Lato', :rel=>'stylesheet', :type=>'text/css'}/
   %body
     = yield
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
